[gd_scene load_steps=3 format=3 uid="uid://blqixldba5dmt"]

[ext_resource type="Script" uid="uid://c8glu85lvpifn" path="res://scripts/options.gd" id="1_c2u1v"]
[ext_resource type="FontFile" uid="uid://b0n31aftfbkjc" path="res://assets/fonts/Bread_Smile.ttf" id="2_yjkok"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c2u1v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -551.0
offset_top = -228.0
offset_right = 1658.0
offset_bottom = 832.0
size_flags_horizontal = 4
color = Color(0.0488223, 5.7426e-05, 0.122333, 1)

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 48.0
offset_right = 328.0
offset_bottom = 128.0
theme_override_fonts/normal_font = ExtResource("2_yjkok")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "Options"

[node name="Offset" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Offset"]
layout_mode = 0
offset_left = 64.0
offset_top = 160.0
offset_right = 352.0
offset_bottom = 192.0
theme_override_fonts/normal_font = ExtResource("2_yjkok")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Music Offset"

[node name="StartOffsetInput" type="LineEdit" parent="Offset"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 64.0
offset_top = 192.0
offset_right = 320.0
offset_bottom = 256.0
theme_override_fonts/font = ExtResource("2_yjkok")
placeholder_text = "Enter offset in seconds."

[node name="SaveOptionsButton" type="Button" parent="Offset"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 448.0
offset_right = 192.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("2_yjkok")
text = "Save"

[node name="Keybinds" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Keybinds"]
layout_mode = 0
offset_left = 64.0
offset_top = 288.0
offset_right = 352.0
offset_bottom = 320.0
theme_override_fonts/normal_font = ExtResource("2_yjkok")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Keybinds"

[node name="Lane1Input" type="LineEdit" parent="Keybinds"]
layout_mode = 0
offset_left = 65.0
offset_top = 320.0
offset_right = 153.0
offset_bottom = 363.0
theme_override_fonts/font = ExtResource("2_yjkok")
placeholder_text = "Lane 1"

[node name="Lane2Input" type="LineEdit" parent="Keybinds"]
layout_mode = 0
offset_left = 161.0
offset_top = 320.0
offset_right = 249.0
offset_bottom = 363.0
theme_override_fonts/font = ExtResource("2_yjkok")
placeholder_text = "Lane 2"

[node name="Lane3Input" type="LineEdit" parent="Keybinds"]
layout_mode = 0
offset_left = 257.0
offset_top = 320.0
offset_right = 345.0
offset_bottom = 363.0
theme_override_fonts/font = ExtResource("2_yjkok")
placeholder_text = "Lane 3"

[node name="Lane4Input" type="LineEdit" parent="Keybinds"]
layout_mode = 0
offset_left = 353.0
offset_top = 320.0
offset_right = 439.938
offset_bottom = 363.0
theme_override_fonts/font = ExtResource("2_yjkok")
placeholder_text = "Lane 4"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 784.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 168.0
theme_override_fonts/normal_font = ExtResource("2_yjkok")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[right]Press ESC to return to the Main Menu from anywhere."

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 672.0
offset_top = 376.0
offset_right = 1088.0
offset_bottom = 621.0
theme_override_fonts/normal_font = ExtResource("2_yjkok")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[right]Difficulty Ratings from easiest to hardest:
Easy
Intermediate
Advanced
Expert
Extreme"
